--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "server",
-  "version": "1.0.0",
+  "name": "micro-poller",
+  "version": "0.0.1",
   "description": "",
   "main": "server.js",
   "dependencies": {
     "axios": "^0.19.0",
-    "express": "^4.17.1",
+    "express": "^4.17.1"
   },
   "author": "Kang Hong Chen",
   "license": "MIT",
