--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "axios": "^0.19.0",
     "express": "^4.17.1"
   },
-  "author": "Kang Hong Chen",
+  "scripts": {
+    "test": "mocha"
+  },
+  "author": "Kang Chen",
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.4.4",
